--- a/sem_5/node/apiFirst/package.json
+++ b/sem_5/node/apiFirst/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "projet de gestion de stock",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node main.js"
+    "dev": "nodemon main.js"
   },
   "author": "frannois",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7"
   }
 }
