--- a/sem_5/node/apiStream/package.json
+++ b/sem_5/node/apiStream/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7",
-    "prisma-docs-generator": "^0.8.0"
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
-    "prisma": "^5.21.1"
+    "prisma": "^5.21.1",
+    "prisma-docs-generator": "^0.8.0"
   }
 }
