--- a/sem_5/node/apiStream/package.json
+++ b/sem_5/node/apiStream/package.json
@@ -13,11 +13,14 @@
   "description": "Api pour le streaming",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "prisma-docs-generator": "^0.8.0"
   }
 }
