--- a/sem_5/graphQl/package.json
+++ b/sem_5/graphQl/package.json
@@ -2,6 +2,7 @@
   "name": "graphql",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "graphql-yoga": "^5.10.4"
   }
 }
