--- a/sem_5/ueLibre/graphiQL/graphQl/.obsidian/app.json
+++ b/sem_5/ueLibre/graphiQL/graphQl/.obsidian/app.json
@@ -8,5 +8,6 @@
   },
   "trashOption": "none",
   "alwaysUpdateLinks": true,
-  "showUnsupportedFiles": true
+  "showUnsupportedFiles": true,
+  "promptDelete": false
 }
