--- a/sem_5/JEE/congé projet/platforme/src/main/resources/application.properties
+++ b/sem_5/JEE/congé projet/platforme/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.elasticsearch.username=elastic
 spring.elasticsearch.password=jTGrTgzYb5garwUVr7LEdUo0
 
 
+## les templates ##
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
 
 
 
