--- a/sem_5/ueLibre/reactNative/my-project/package.json
+++ b/sem_5/ueLibre/reactNative/my-project/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "bootstrap": "^5.3.3",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
