--- a/sem_5/ueLibre/NextJs/next_task/package.json
+++ b/sem_5/ueLibre/NextJs/next_task/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
+    "formik": "^2.4.6",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
